# promethium

./: CONTRIBUTING.md  README.md  hatch.toml  pyproject.toml  pyrightconfig.json
.devcontainer/: devcontainer.json  postCreateCommand.sh
promethium/: __init__.py
promethium/distributions/: binomial.py  chi2.py  geometric.py  normal.py  poisson.py
promethium/special/: gamma.py
python_probabilities/: __init__.py  distributions_binomial.py  distributions_chi_squared.py  distributions_geometric.py  distributions_negative_binomial.py  distributions_normal.py  distributions_poisson.py
python_probabilities/special/: gamma.py
src/promethium/distributions/: binomial.py  geometric.py
src/promethium/special/: gamma.py
tests/: chi2.py  test.py  test_binomial.py  test_chi2.py  test_geometric.py  test_normal.py  test_poisson.py  utility.py
