[tool.poetry]
name = "python-probabilities"
version = "0.4.4"
description = "Library for accurate statistical calculations using Python."
authors = ["berkay-yalin <66202981+berkay-yalin@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_probabilities"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"
pyright = "^1.1.301"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
