[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promethium"
dynamic = ["version"]
description = "Library for calculating statistical distributions, written in pure Python with zero dependencies."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
keywords = []
authors = [
    { name = "berkay", email = "66202981+berkay-yalin@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/berkay-yalin/promethium#readme"
Issues = "https://github.com/berkay-yalin/promethium/issues"
Source = "https://github.com/berkay-yalin/promethium"

[tool.coverage.run]
source_pkgs = ["promethium", "tests"]
branch = true
parallel = true
omit = [
  "src/promethium/__about__.py",
]

[tool.coverage.paths]
promethium = ["src/promethium", "*/promethium/src/promethium"]
tests = ["tests", "*/promethium/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
